Import of SWALTERS/autobox-Core-0.5 from CPAN.
gitpan-cpan-distribution: autobox-Core
gitpan-cpan-version:      0.5
gitpan-cpan-path:         SWALTERS/autobox-Core-0.5.tar.gz
gitpan-cpan-author:       SWALTERS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,14 @@
 --- #YAML:1.0
 name:                autobox-Core
-version:             0.4
-abstract:            Perl built-in functions exposed as methods in primitive types
+version:             0.5
+abstract:            Methods for core built-in functions in primitive types
 license:             ~
-generated_by:        ExtUtils::MakeMaker version 6.32
+author:              
+    - Scott Walters scott@slowass.net
+generated_by:        ExtUtils::MakeMaker version 6.44
 distribution_type:   module
 requires:     
     autobox:                       0.11
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
-author:
-    - Scott Walters scott@slowass.net
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
