--- a/META.yml
+++ b/META.yml
@@ -1,20 +1,14 @@
 --- #YAML:1.0
-name:               autobox-Core
-version:            0.10
-abstract:           Methods for core built-in functions in primitive types
-author:
+name:                autobox-Core
+version:             0.07
+abstract:            Core functions exposed as methods in primitive types
+license:             ~
+author:              
     - Scott Walters scott@slowass.net
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    autobox:  0.11
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
+    autobox:                       0.11
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
