--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,20 @@
 --- #YAML:1.0
-name:                autobox-Core
-version:             0.07
-abstract:            Core functions exposed as methods in primitive types
-license:             ~
-author:              
+name:               autobox-Core
+version:            0.7
+abstract:           Core functions exposed as methods in primitive types
+author:
     - Scott Walters scott@slowass.net
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    autobox:                       0.11
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    autobox:  0.11
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
