--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               autobox-Core
-version:            1.0
+version:            1.1
 abstract:           Core functions exposed as methods in primitive types
 author:
     - Scott Walters scott@slowass.net
@@ -10,6 +10,9 @@ configure_requires:
     ExtUtils::MakeMaker:  0
 requires:
     autobox:  0.11
+resources:
+    bugtracker:  http://github.com/scrottie/autobox-Core/issues
+    repository:  http://github.com/scrottie/autobox-Core
 no_index:
     directory:
         - t
